# Stereo-seq

handleBam/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
handleBam/density/: CMakeLists.txt  kde.cpp  kde.hpp
handleBam/handleBam/: CMakeLists.txt  annotationException.h  bamCat.cpp  bamCat.h  bamRecord.cpp  bamRecord.h  bamUtils.cpp  bamUtils.h  geneBuilder.cpp  geneBuilder.h  geneFromGTF.cpp  geneFromGTF.h  gtfReader.cpp  gtfReader.h  gtfRecord.h  gzIO.cpp  gzIO.h  handleBam.cpp  handleBam.h  interval.h  intervalTree.h  locusFunction.cpp  locusFunction.h  main.cpp  samReader.cpp  samReader.h  samWriter.h  saturation.cpp  saturation.h  tagReadsWithGeneExon.cpp  tagReadsWithGeneExon.h  threadpool.h  timer.h  types.h  utils.cpp  utils.h
handleBam/script/: build.sh  formatCode.sh
